# GHRep

./: .gitignore
Haskell/: .gitignore  Haskell.cabal  Hello.hs  monex.hs  primedie.hs  primes.hs  squares.hs  squares.txt  test.hs  tictactoe.hs  util.hs
Haskell/BinarySum/: BinarySum.hs
Haskell/Wordle/: TestList.xlsx  Wordle.hs  WordleData.hs  WordleTestWord.hs  WordleUtils.hs  wordle.hs  wordleData.hs  wordleSolve.hs  wordleTest.hs  wordleTestWord.hs  wordleUtils.hs
Haskell/Wordle2/: TargetList.xlsx  Wordle.hs  WordleData.hs  WordleSolve.hs  WordleTest.hs  WordleTestWord.hs  WordleUtils.hs  Wordlerpar.hs  main.e65ce0a5.js  steve.txt  stevehumph.txt
Haskell/myfirstapp/: myfirstapp.cabal
Haskell/pow/: CHANGELOG.md  pow.cabal  stack.yaml
Haskell/pow/app/: Main.hs
Haskell/sudoku/: monte-carlo.hs  monte-carlo.hsk  sudoku.hs  sudokuGrid.hs  sudokuSolve.hs  util.hs
Mathematica/binary sums/: binary sums.nb
Python/Rowlet/: constant sum.py  exhaustive_search.py  max heap size.py  max sum.py
Python/exercises/: 1liter.py  Simpson.py  ball_label.py  doomsday.py  energy_levels.py  f2c_appox_table.py  find_errors_programs.py  find_errors_sin1.py  formulas_shapes.py  guassian1.py  interest_rate.py  kick.py  length_conversion.py  primes.py  seconds2years.py  steve_array.py  sum_int.py  sun_data.py  sun_data2.py  test_double.py
Python/misc/: MS Office COM.py
Python/wow app/: json test.py  login.py
Rust/hello_world/: Cargo.toml
Rust/scrabble/: Cargo.toml
Rust/wasm-game-of-life/: Cargo.toml
assembler/: .gitignore
assembler/example/: asm64  example.asm
(+228 files in other folders)
